# scorecounter

./: Cargo.toml  Dioxus.toml  README.md  index.html
.github/workflows/: pages.yml
assets/: main-dxhed9a2ccb606c73.css  main-dxhf3fbb52286a3ebc4.css  main.css  manifest-dxh1f52c9a650349b38.webmanifest  manifest-dxhf9a4d880f45b0d1.webmanifest  scorecounter-dxh828394e3f0ceca95.js  scorecounter-dxha6584e51a259b463.js  scorecounter-dxhd9e68961110fb84.js  scorecounter-dxhe3e293e0c0ff9228.js  scorecounter_bg-dxh561d7347d52fdfdf.wasm  scorecounter_bg-dxh75901efa4fb7a3c.wasm  scorecounter_bg-dxha266a5d86fd9ea58.wasm  scorecounter_bg-dxhd48713d9fc7f4dc.wasm  service-worker.js  sw-register-dxh6618952c3dda75b6.js  sw-register-dxh9e1842fe3fa1e5a.js  sw-register.js
src/: app.rs  main.rs  state.rs
