[package]
name = "scorecounter"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["web", "router"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "Element", "HtmlMetaElement", "HtmlHeadElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["js", "v4", "fast-rng"] }
